// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changeAttributeFilterSelectionHandler.test > should emit the appropriate events for changed attribute filter selection 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.FILTER_CONTEXT.ATTRIBUTE_FILTER.CHANGE_SELECTION",
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.ATTRIBUTE_FILTER.SELECTION_CHANGED",
  },
  {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.CHANGED",
  },
]
`;

exports[`changeAttributeFilterSelectionHandler.test > should emit the appropriate events when trying to change a non-existent attribute filter 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.FILTER_CONTEXT.ATTRIBUTE_FILTER.CHANGE_SELECTION",
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.COMMAND.FAILED",
  },
]
`;

exports[`changeAttributeFilterSelectionHandler.test > should set the attribute selection in state on changed attribute filter selection 1`] = `
{
  "attributeFilter": {
    "attributeElements": {
      "uris": [
        "testing/uri",
      ],
    },
    "displayForm": {
      "identifier": "f_owner.department_id",
      "type": "displayForm",
    },
    "localIdentifier": Any<String>,
    "negativeSelection": true,
    "selectionMode": "multi",
  },
}
`;
